--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,139 @@
+* {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
+.header {
+  width: 100%;
+  display: flex;
+  height: 64px;
+  position: fixed;
+  background-color: white;
+  top: 0px;
+
+}
+
+.navigation {
+  float: right;
+  height: 100%;
+  margin: 0 auto;}
+
+ 
+.navigation a {
+  height: 100%;
+  display: table;
+  float: left;
+  padding: 0px 20px;}
+
+.learn {
+  display: inline-flex;
+  background-color: gray;
+  padding: 32px 24px;
+
+}
+
+.bannerimage {
+  width: 60%;
+  padding: 32px 24px;
+
+}
+.learntext {
+  text-align: left;
+}
+
+.start {
+  padding: 8px;
+  background-color: darkslategrey;
+}
+
+.smallphotos {
+  width: 40%;
+  
+}
+
+.practice {
+  display: flex;
+  padding: 32px 24px;
+}
+
+.phototext {
+  display: flex;
+  width: 40%;
+  
+}
+
+.phototext2 {
+  display: flex;
+  background-color: gray;
+}
+
+.smallimg {
+  width: 35%;
+  height: auto;
+  margin: 16px;
+}
+
+.learning {
+  background-color: gray;
+  text-align: center;
+  padding: 32px 72px;
+
+}
+.learning2 {
+  margin: 15px auto auto auto;
+  max-width: 1050px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+
+  
+}
+
+
+.box {
+  height: auto;
+  margin-bottom: auto;
+  flex-basis: 30%;
+  background-color: white;
+  opacity: 1;
+  text-align: left;
+
+}
+
+.video {
+  object-fit: contain;
+  overflow-clip-margin: content-box;
+  overflow: clip;
+  width: 60%;
+  padding-left: 24px;
+  padding-top: 32px;
+}
+
+.exhibit {
+  background-color: white;
+  display: inline-block;
+}
+
+.footer1 {
+  text-align: left;
+  width: 50%;
+}
+
+.footer2 {
+  text-align: right;
+  width: 50%;
+}
+.footdiv {
+  display: flex;
+  margin: 16px 24px;
+}
+
+.u2 {
+  margin-top: 8px;
+}
+.urban {
+  text-align: left;
+  margin: 24px 24px 32px 24px;
+  width: 60%;
+}
