--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,45 +1,65 @@
 * {
-  font-family: sans-serif;
+  font-family: Poppins;
   margin: 0;
   padding: 0;
 }
 
-.header {
-  width: 100%;
+nav {
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
   display: flex;
-  height: 64px;
+  padding: 1%;
   position: fixed;
   background-color: white;
-  top: 0px;
-
+  width: 98%;
 }
 
-.navigation {
-  float: right;
-  height: 100%;
-  margin: 0 auto;}
+nav ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
 
+nav li {
+  padding: 0.5em 0.5em;
+}
  
-.navigation a {
-  height: 100%;
-  display: table;
-  float: left;
-  padding: 0px 20px;}
+nav a {
+ text-decoration: none;
+ color: darkgray;
+}
+
+button {
+  border: none;
+}
+
+.bannerimg2 p {
+  color: gray;
+}
 
 .learn {
-  display: inline-flex;
-  background-color: gray;
-  padding: 32px 24px;
-
+  display: flex;
+  background-color: lightgray;
+  padding: 2%;
+  padding-top: 90px;
 }
 
-.bannerimage {
-  width: 60%;
-  padding: 32px 24px;
-
-}
 .learntext {
-  text-align: left;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px 1%;
+  padding: 30px 3%;
+}
+
+.learntext h1 h4 {
+  color: darkgray;
+}
+
+.learntext button {
+  color: white;
+  text-decoration: none;
 }
 
 .start {
@@ -48,71 +68,147 @@
 }
 
 .smallphotos {
-  width: 40%;
-  
+  display: flex;
+  flex-direction: column; 
+}
+
+.smallphotos img {
+  width: 10rem;
+}
+
+.smallphotos h4 {
+  font-size: 140%;
+}
+
+.orientation, .campus, .guest {
+  display: flex;
+  border: 1px, solid, lightgray;
+  padding: 2%;
+}
+
+.orientation-info > * {
+  padding: 2% 0;
+}
+
+.campus-info > * {
+  padding: 2% 0;
+}
+
+.guest-info > * {
+  padding: 2% 0;
+}
+
+.orientation-info, .campus-info, .guest-info {
+  padding: 0 5%;
+  margin-top: 4%;
+  font-size: 80%;
+}
+
+.guest {
+  background-color: lightgray;
+  margin: 0 0 2% 0;
 }
 
 .practice {
-  display: flex;
-  padding: 32px 24px;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  padding: 2%
 }
 
-.phototext {
-  display: flex;
-  width: 40%;
-  
-}
-
-.phototext2 {
-  display: flex;
-  background-color: gray;
+.practice {
+  background-color: white;
 }
 
 .smallimg {
   width: 35%;
   height: auto;
-  margin: 16px;
+  margin: 2px;
 }
 
-.learning {
-  background-color: gray;
-  text-align: center;
-  padding: 32px 72px;
-
-}
-.learning2 {
-  margin: 15px auto auto auto;
-  max-width: 1050px;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-
-  
+.learning img {
+  width: 100%;
 }
 
-
-.box {
-  height: auto;
-  margin-bottom: auto;
-  flex-basis: 30%;
-  background-color: white;
-  opacity: 1;
+.u2 {
+  margin-top: 8px;
+}
+.urban {
   text-align: left;
-
-}
-
-.video {
-  object-fit: contain;
-  overflow-clip-margin: content-box;
-  overflow: clip;
+  margin: 24px 24px 32px 24px;
   width: 60%;
-  padding-left: 24px;
-  padding-top: 32px;
 }
 
-.exhibit {
+.logo {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  font-size 1.1rem;
+}
+
+.logo p {
+  display: inline;
+  font-weight: bold;
+  color: darkslategray;
+}
+
+.logo span {
+  font-weight: medium;
+  color: lightgray;
+}
+
+.read {
+  text-decoration: underline;
+  color: lightskyblue;
+}
+
+.sl-grid-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2%;
+  margin-left: 72px;
+  margin-right: 72px;
+}
+
+.sl-grid-wrapper img {
+  width: 100%;
+}
+
+.sl-grid-wrapper > * {
+  display: flex;
+  flex-direction: column;
+}
+
+.sl-info {
   background-color: white;
-  display: inline-block;
+  padding: 5%;
+  text-align: left;
+  margin-bottom: 24px;
+  height: 135px;
+}
+
+.sl-info > * {
+  padding: 3% 0;
+}
+
+.sl-info > p {
+  font-size: small;
+  color: lightgray;
+}
+
+.sl-container {
+  text-align: center;
+  padding: 2%;
+  background-color: lightgray;
+}
+
+.sl-img {
+  margin-bottom: -.5em;
+}
+
+.urban-video video {
+  width: 100%;
+  display: flex;
+  
 }
 
 .footer1 {
@@ -124,16 +220,25 @@
   text-align: right;
   width: 50%;
 }
+
 .footdiv {
   display: flex;
   margin: 16px 24px;
 }
 
-.u2 {
-  margin-top: 8px;
-}
-.urban {
-  text-align: left;
-  margin: 24px 24px 32px 24px;
-  width: 60%;
+@media only screen and (max-width: 600px) {
+ .bannerimg2 {
+   display: none;
+ }
+
+ .practice {
+  display: flex;
+  flex-flow: column;
+ }
+
+ .orientation, .campus, .guest {
+  display: flex;
+  flex-flow: column;
+ }
+
 }
